--- a/dashboard.html
+++ b/dashboard.html
@@ -39,13 +39,13 @@
      <div class="settings">
         <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
         <p>Craig Trowbridge</p>
-        <ul class="menu">
+        <ul class="popup">
           <li>
             <a href="#"><i class="fa fa-cog"></i></a>
         <ul>
             <li><a href="#"><i class="fa fa-cog"></i> Account Settings</a></li>
-            <li><a href="#"><i class="fa fa-group "></i> Collaborators</a></li>
-            <li><a href="#"><i class="fa fa-sign-out "></i> Sign Out</a></li>
+            <li><a href="#"><i class="fa fa-group"></i> Collaborators</a></li>
+            <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
         </ul>
       </li> 
      </ul>
@@ -131,13 +131,13 @@
      </div>
    </section>
  </main>
- <script src="js/jquery-3.1.0.min.js"></script>
- <script src="js/dropit.js"></script>
- <script type="text/javascript">
-     $(".menu").dropit();
+   <script src="js/jquery-3.1.0.min.js"></script>
+   <script src="js/dropit.js"></script>
+   <script type="text/javascript">
+     $(".popup.menu").dropit();
        $( "#menu" ).click(function() {
          $("#left-nav").toggleClass("open", 200);
      });
- </script>
-</body>
+   </script>  
+ </body>
 </html>
