--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
    <section class="testimonials">
    <div class="container">
      <h2>Who uses blocbox?</h2>
-     <p>blocbox has more than 100,000 satisfied users storing and collaborating<br/> with teams across the world. Here's what a few have to say:</p>
+     <p class="users">blocbox has more than 100,000 satisfied users storing and collaborating<br/> with teams across the world. Here's what a few have to say:</p>
    </div>
    <ul class="container">
      <li class="one-fourth">
