--- a/dashboard.html
+++ b/dashboard.html
@@ -39,7 +39,7 @@
      <div class="settings">
         <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
         <p>Craig Trowbridge</p>
-        <ul class="popup">
+        <ul class="popup dropit-inverse">
           <li>
             <a href="#"><i class="fa fa-cog"></i></a>
         <ul>
@@ -58,7 +58,7 @@
      <div class="container">
        <div class="header">
          <h1>All Items</h1>
-           <ul class="menu">
+           <ul class="menu dropit-base">
             <li>
               <a href="#" class="btn">+ Add</a>
               <ul>
@@ -134,10 +134,11 @@
    <script src="js/jquery-3.1.0.min.js"></script>
    <script src="js/dropit.js"></script>
    <script type="text/javascript">
-     $(".popup.menu").dropit();
-       $( "#menu" ).click(function() {
-         $("#left-nav").toggleClass("open", 200);
-     });
+      $(".menu").dropit();
+      $(".popup").dropit();
+      $( "#menu" ).click(function() {
+        $("#left-nav").toggleClass("open", 200);
+      });
    </script>  
  </body>
 </html>
